<resources>
    <string name="app_name">RateMyCs</string>
    <string name="navigation_drawer_open">open nav drawer</string>
    <string name="navigation_drawer_close">close nav drawer</string>
    <string name="course_details">Course Details</string>
    <string name="course_code">Course Code: </string>
    <string name="full_name">Full Name: </string>
    <string name="school_name">School Name: </string>
    <string name="add_to_saved_courses">Add To Saved Courses</string>
    <string name="add_review">Add Review</string>
    <string name="_5"> / 5</string>
    <string name="none">-</string>
    <string name="average_rating">"Average Rating: "</string>
    <string name="default_course_label">CXXX XXXX</string>
    <string name="overall_rating_label">Overall Rating:</string>
    <string name="score_hint"># / 5</string>
    <string name="professor_taken_label">Professor Taken:</string>
    <string name="review_hint">Write Review Here</string>
    <string name="submit_label">Submit</string>
    <string name="clear_label">clear</string>
    <string name="review_description_label">Review Description:</string>
    <string name="prof_name_hint">Prof. Name</string>
    <string name="explore_courses">Explore Courses</string>
    <string name="saved_courses">Saved Courses</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="explore_computer_science_courses">Explore Computer Science Courses</string>
    <string name="sign_in_for_full_experience">Sign In for Full Experience</string>
    <string name="no_courses_saved_yet">No Courses Saved Yet</string>
    <string name="please_explore_and_save_courses_to_view_here">Please explore and save courses to view here</string>
    <string name="welcome_to_nrate_my_cs_course">Welcome to\nRate My CS Course</string>
    <string name="fill_in_fields_to_sign_up">Fill in fields to Sign Up</string>
    <string name="new_user_sign_up_with_above_info">New User? SIGN UP</string>
    <string name="continue_as_a_guest">CONTINUE AS A GUEST</string>
    <string-array name="School_Options">
        <item>Florida State University</item>
        <item>Florida A&amp;M University</item>
        <item>University of Florida</item>
        <item>University of Central Florida</item>
        <item>Florida Institute of Technology</item>
        <item>University of Miami</item>
        <item>University of South Florida</item>
        <item>Florida International University</item>
        <item>University of North Florida</item>
        <item>Florida Atlantic University</item>
    </string-array>
</resources>