<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseDetailsFragment">

    <LinearLayout
        android:id="@+id/detailsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="4dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/course_details"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/code_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_code"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/school_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_name"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/rating_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/average_rating" />

            <TextView
                android:id="@+id/avgRating_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/none"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fiveTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/_5"
                android:textSize="18sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_Recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/reviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_review"
                android:paddingHorizontal="20dp"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_to_saved_courses"
                android:paddingHorizontal="20dp"
                android:layout_gravity="bottom"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>